--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "geo-tz": "^8.1.5",
     "lucide-react": "^0.554.0",
     "next": "^14.2.5",
     "next-themes": "^0.4.4",
